--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -14,24 +14,24 @@ Given an\/ $\SKS$ derivation\/ $\Phi$, there is a unique atomic flow $\phi$ such
 \item for each inference rule instance $\vlsmash{\vlinf{\rho}{}{\beta}{\alpha}}$ of\/ $\Phi$, where $\rho\in\{\aid,\aiu,\awd,\awu,\acd,\acu\}$, the atom occurrences in $\vlinf{\rho}{}{\beta}{\alpha}$ are mapped to edges of $\phi$ such that the edges are related with vertices as indicated below, for each possible case of the inference rules:
 \[
 \begin{array}{@{}ccc@{}ccc@{}}
-\vlinf{}{}{\vls[a^\one.{\bar a^\two}]}{\ttt}&\mbox{to\/}&
+\vlinf{\aid}{}{\vls[a^\one.{\bar a^\two}]}{\ttt}&\mbox{to\/}&
 \vcenter{\afaid\one{}{}\two{}{}}
 \quad,&\qquad
-\vlinf{}{}{\fff}{\vls(a^\one.{\bar a^\two})}&\mbox{to\/}&
+\vlinf{\aiu}{}{\fff}{\vls(a^\one.{\bar a^\two})}&\mbox{to\/}&
 \vcenter{\afaiu\one{}{}\two{}{}}
 \quad,\\
 \noalign{\medskip}
-\vlinf{}{}{a^\one}{\fff}                    &\mbox{to\/}&
+\vlinf{\awd}{}{a^\one}{\fff}                    &\mbox{to\/}&
 \vcenter{\afawd{}{}{}\one{}} 
 \quad,&\qquad
-\vlinf{}{}{\ttt}{a^\one}                    &\mbox{to\/}&
+\vlinf{\awu}{}{\ttt}{a^\one}                    &\mbox{to\/}&
 \vcenter{\afawu{}{}{}\one{}}
 \quad,\\
 \noalign{\medskip}
-\vlinf{}{}{a^\three}{\vls[a^\one.a^\two]}   &\mbox{to\/}&
+\vlinf{\acd}{}{a^\three}{\vls[a^\one.a^\two]}   &\mbox{to\/}&
 \vcenter{\afacd\one{}{}\two{}\three}
 \quad,&\qquad
-\vlinf{}{}{\vls(a^\two.a^\three)}{a^\one}   &\mbox{to\/}&
+\vlinf{\acu}{}{\vls(a^\two.a^\three)}{a^\one}   &\mbox{to\/}&
 \vcenter{\afacu\two{}{}\three{}\one}
 \quad,\\
 \end{array}
