--- a/flows.tex
+++ b/flows.tex
@@ -44,7 +44,7 @@ An (\emph{atomic}) \emph{flow} is a tuple $(V,E,\eta,\up,\lo)$, denoted $\phi$ o
 %-------------------
 \item $V$ is a finite set of \emph{vertices}, denoted by $\nu$;
 %-------------------
-\item $E$ is a finite set of \emph{edges}, denoted by $\epsilon$;
+\item $E$ is a finite set of \emph{edges}, denoted by $\epsilon$ or $\iota$;
 %-------------------
 \item $\eta\colon V\to\{\aid,\aiu,\awd,\awu,\acd,\acu\}$ maps vertices to their \emph{labels};
 %-------------------
@@ -223,8 +223,6 @@ If we label an atomic flow with a polarity assignment it can not contain any int
 
 \TODO{Define subflow}.
 
-\TODO{Clean out old stuff from the following sub section.}
-
 \begin{definition}\label{definition:LabelsIsomorphicFlows}
 By giving two atomic flows the same label we indicated that there is a bijection between them.
 Given two atomic flows $\phi$ and $\psi$, a bijection $f$ between them and the edge $\epsilon$ in $\phi$, by labeling an edge in $\psi$ by $\hat\epsilon$ (resp., $\tilde\epsilon$ or $\epsilon^1$, $\epsilon^2$, $\dots$) we indicate that $f(\epsilon)=\hat\epsilon$ (resp., $f(\epsilon)=\tilde\epsilon$ or $f(\epsilon)=\epsilon^1$, $f(\epsilon)=\epsilon^2$, $\dots$).
@@ -352,6 +350,8 @@ If $\epsilon$ in $\phi$ corresponds to $\epsilon'$ in $\psi$ it is not a problem
 
 %=======================================
 \section{Paths and Cycles}\label{section:PathsAndCycles}
+
+\TODO{Remove unneeded stuff from here.}
 
 We now define the notions of `$\ai$-path' and `$\ai$-cycle' in atomic flows. Paths are sequences of adjacent edges that only `go down' or only `go up'; $\ai$-paths are formed by joining paths at interaction or cointeraction vertices; $\ai$-cycles are circular $\ai$-paths. We also define the notion of `simple edge', \emph{i.e.}, an edge connecting an interaction and a cointeraction, as in the first diagram in this paper.
 
